[tool.poetry]
name = "langchain-demo"
version = "0.1.0"
description = "basic langchain use case"
authors = ["npherrington"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.9"
langchain-openai = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
